--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "CYGG",
-    "description": "Playable NowGG Roblox In A Proxy",
+    "description": "Playable NowGG In A Proxy",
     "repository": "https://github.com/CybriaTech/CybriaGG/",
     "logo": "https://github.com/CybriaTech/CybriaGG/blob/main/public/cygg-logo-invert.png?raw=true",
-    "keywords": ["roblox"]
+    "keywords": [""]
 }
